--- a/bvtv_www/pom.xml
+++ b/bvtv_www/pom.xml
@@ -80,7 +80,7 @@
 				<version>11.7.2</version>
 				<configuration>
 					<url>jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require</url>
-					<user>postgres.kslvftketzqwjeakyuua</user>
+					<user>postgres.gtisetgczrpoaqafhbbk</user>
 					<password>Huy0522714563</password>
 					<driver>org.postgresql.Driver</driver>
 					<locations>
