--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Dùng pooler của Supabase (port 5432)
 spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.gtisetgczrpoaqafhbbk
+spring.datasource.username=postgres.onxixdnbouagfotgojvf
 spring.datasource.password=Huy0522714563
 spring.datasource.driver-class-name=org.postgresql.Driver
 
