--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-# Dùng pooler của Supabase (port 5432)
+# Direct connection cho Flyway migrations (port 6543)
+# Supabase yêu cầu direct connection (không qua pooler) cho DDL operations
 spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.kaowbattcqlepsymmrix
+spring.datasource.username=postgres.znzhkmbiksyesimuwysr
 spring.datasource.password=Huy0522714563
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
