--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Direct connection cho Flyway migrations (port 6543)
 # Supabase yêu cầu direct connection (không qua pooler) cho DDL operations
 spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.znzhkmbiksyesimuwysr
-spring.datasource.password=Huy0522714563
+spring.datasource.username=postgres.yyhsnrbqjysyctrnhvlx
+spring.datasource.password=Luongxmen1402$
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
