--- a/Frontend/bvtv-shop/package.json
+++ b/Frontend/bvtv-shop/package.json
@@ -9,16 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-markdown": "^10.1.0",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
