--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Direct connection cho Flyway migrations (port 6543)
 # Supabase yêu cầu direct connection (không qua pooler) cho DDL operations
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
 spring.datasource.username=postgres.yyhsnrbqjysyctrnhvlx
 spring.datasource.password=Luongxmen1402$
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,3 +20,4 @@ spring.flyway.schemas=public
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.minimumIdle=1
 spring.datasource.hikari.autoCommit=true
+gemini.api.key=AIzaSyBqq4Z3gNpvaim_1ShtiL_-KLZps1Q8k_4
