--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.flyway.schemas=public
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.minimumIdle=1
 spring.datasource.hikari.autoCommit=true
-gemini.api.key=AIzaSyBqq4Z3gNpvaim_1ShtiL_-KLZps1Q8k_4
+gemini.api.key=${GEMINI_KEY}
