--- a/bvtv_www/pom.xml
+++ b/bvtv_www/pom.xml
@@ -107,8 +107,8 @@
 				<version>11.7.2</version>
 				<configuration>
 					<url>jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require</url>
-					<user>postgres.yyhsnrbqjysyctrnhvlx</user>
-					<password>Luongxmen1402$</password>
+					<user>postgres.znzhkmbiksyesimuwysr</user>
+					<password>Huy0522714563</password>
 					<driver>org.postgresql.Driver</driver>
 					<locations>
 						<location>classpath:db/migration</location>
