--- a/bvtv_www/pom.xml
+++ b/bvtv_www/pom.xml
@@ -106,8 +106,8 @@
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>11.7.2</version>
 				<configuration>
-					<url>jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require</url>
-					<user>postgres.znzhkmbiksyesimuwysr</user>
+					<url>jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require</url>
+					<user>postgres.bgwoknkgwdludjoxgsmv</user>
 					<password>Huy0522714563</password>
 					<driver>org.postgresql.Driver</driver>
 					<locations>
