--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-# Direct connection cho Flyway migrations (port 6543)
+# Direct connection cho Flyway migrations (port 5432)
 # Supabase yêu cầu direct connection (không qua pooler) cho DDL operations
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
-spring.datasource.username=postgres.znzhkmbiksyesimuwysr
+# đổi 6543 (pooler) sang 5432 (direct connection) (đổi qua lại nếu lỗi)
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?sslmode=require&prepareThreshold=0
+spring.datasource.username=postgres.bgwoknkgwdludjoxgsmv
 spring.datasource.password=Huy0522714563
 spring.datasource.driver-class-name=org.postgresql.Driver
 
