--- a/bvtv_www/src/main/resources/application.properties
+++ b/bvtv_www/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.minimumIdle=1
 spring.datasource.hikari.autoCommit=true
 gemini.api.key=${GEMINI_KEY}
+
+# ============================================================
+# JWT Configuration
+# ============================================================
+jwt.secret=your-super-secret-key-that-is-at-least-32-characters-long-change-this-in-production
+jwt.expiration=86400000
+# 24 giờ = 86400000 milliseconds
