--- a/bvtv_www/pom.xml
+++ b/bvtv_www/pom.xml
@@ -92,6 +92,20 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.13.0</version>
 		</dependency>
+
+		<!-- Supabase Storage Client -->
+		<dependency>
+			<groupId>io.github.jan-tennert.supabase</groupId>
+			<artifactId>storage-kt-jvm</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+		
+		<!-- OkHttp for Supabase -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.12.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
